Fix edit button getting pushed out of view.

--- a/feedback-frontend/src/app/common/styles.scss
+++ b/feedback-frontend/src/app/common/styles.scss
@@ -71,6 +71,14 @@
   overflow: auto;
 }
 
+.inner-content {
+  max-height: 350px;
+  overflow-y: hidden;
+}
+
+.inner-content:hover {
+  overflow-y: scroll;
+}
 
 /*------------------------------------*\
   #FOOTER
